// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match should disable colors 1`] = `
"[4m[35manot[39mher[24m
└── 1.0.0
"
`;

exports[`match should print the matched modules according to passed string 1`] = `
"[4m[35manot[39mher[24m
└── [38;5;72m1.0.0[39m
"
`;

exports[`match should show a message when no module has matched the provided string 1`] = `"Could not find any module that matches \\"bla\\""`;
